--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.9
 homepage: https://github.com/jingluoguo/staggered_reorderable
 
 environment:
-  sdk: ">=2.16.2 <3.8.0"
+  sdk: ">=2.16.2 <=3.8.0"
   flutter: ">=1.17.0"
 
 dependencies:
